--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+  <title>Trabajo Final - Carlos Alberto Conte</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Trabajo Final</title>
+  <meta name="description" content="Entraga Final - CV">
+  <meta name="author" content="Carlos Alberto Conte">
+  <link rel="shortcut icon" href="imagenes/favicon.png" type="image/png" />
   <meta property="og:title" content="Curriculum Vitae" />
   <meta property="og:type" content="Website" />
   <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
@@ -43,7 +46,7 @@
     </section>
     <section id="experiencia" class="desplegable efecto">
       <div class="titulo"><h3>Experiencia</h3></div>
-      <div class="Boton collapsible"><i class='bx bx-down-arrow-circle'></i></div>
+      <div class="collapsible"><i class='bx bx-down-arrow-circle'></i></div>
       <div class="content">
         <span><i class='bx bx-calendar'></i> 2022 - Hoy | <i class='bx bx-map'></i> Argentina</span>
         <h4>Front-End Desarrollador</h4>
@@ -52,7 +55,7 @@
     </section>
     <section id="habilidades" class="desplegable efecto">
       <div class="titulo"><h3>Habilidades tecnicas</h3></div>
-      <div class="Boton collapsible"><i class='bx bx-down-arrow-circle'></i></div>
+      <div class="collapsible"><i class='bx bx-down-arrow-circle'></i></div>
       <div class="content">
         <div class="habilidad">
           <div class="detalles">
@@ -114,7 +117,7 @@
     </section>
     <section id="formacion" class="desplegable efecto">
       <div class="titulo"><h3>Formación</h3></div>
-      <div class="Boton collapsible"><i class='bx bx-down-arrow-circle'></i></div>
+      <div class="collapsible"><i class='bx bx-down-arrow-circle'></i></div>
       <div class="content">
         <h4><span><i class='bx bxs-graduation'></i></span>Licenciado en Tecnologia Informatica</h4>
         <h5>E.A.N. Escuela Argentina de Negocios</h5>
